--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body{
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 }
+p{
+    font-size: large;
+    font-weight: 700;
+    margin-top: 10px;
+}
 .app{
     background: #fff;
     width: 90%;
